# lang

./: .gitignore  .gitmodules  ast.py  error.h  hello.lo  lexer.c  lexer.h  lexer.py  main.c  main.py  meson.build  parser.py
include/: lang.h
src/: lang.c  lexer.c
